src/objects/IPM_CompanyCard__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>configuration of company card page</description>
    <fields>
        <fullName>IPM_Country__c</fullName>
        <defaultValue>false</defaultValue>
        <description>to check country is applicable to company card or not</description>
        <label>Country</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Global__c</fullName>
        <defaultValue>false</defaultValue>
        <description>to check global is applicable to company card or not</description>
        <label>Global</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Local__c</fullName>
        <defaultValue>false</defaultValue>
        <description>to check whether user has selected local company card or not.</description>
        <label>Local</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_MCO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>to check MCO is applicable to company card or not</description>
        <label>MCO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Market_Cluster__c</fullName>
        <defaultValue>false</defaultValue>
        <description>to check market cluster is applicable to company card or not</description>
        <label>Market Cluster</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Multiple_Geographical_Scope__c</fullName>
        <defaultValue>false</defaultValue>
        <description>to check whether company card has multiple geographical scope or not.</description>
        <label>Multiple Geographical Scope</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Multiple_Managed_Catagory__c</fullName>
        <defaultValue>false</defaultValue>
        <description>to check whether company card has multiple category or not.</description>
        <label>Multiple Managed Catagory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Regional__c</fullName>
        <defaultValue>false</defaultValue>
        <description>to check user has selected regional or not</description>
        <label>Regional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Single_Geographical_Scope__c</fullName>
        <defaultValue>false</defaultValue>
        <description>to check whether company card has single geographical scope or not.</description>
        <label>Single Geographical Scope</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Single_Managed_Catagory__c</fullName>
        <defaultValue>false</defaultValue>
        <description>to check whether company card has single managed category or not.</description>
        <label>Single Managed Catagory</label>
        <type>Checkbox</type>
    </fields>
    <label>IPM CompanyCard</label>
</CustomObject>